Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-67043

[QWebEngineView] Webview loses focus on second load()

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • None
    • 5.10.0, 5.10.1
    • WebEngine
    • None
    • Linux

    Description

      Webview will lose focus (focus will move to the next widget in focus chain) after 2nd call to QWebEngineView::load().
      The reason is that QWebEnginePrivate::passOnFocus gets called which then calls QWidget::focusNextPrevChild.

      Please see attached test case, you should see that focusNextPrevChild was called.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            allan.jensen Allan Sandfeld Jensen
            nowrep David Rosca
            Votes:
            2 Vote for this issue
            Watchers:
            6 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes