WebView: Don't prevent tabbing out of webview with QtWebEngine 5.11

QTBUG-67043 which caused losing focus is now fixed.